objects/PMC_CPQ_FPDPriceFx__e.object
<CustomObject>
    <description>This platform event is to publish and subscribe events from Pricefx system.</description>
    <fields>
        <fullName>PMC_CPQ_FPDPrice__c</fullName>
        <description>The FPD Price received from PriceFX</description>
        <label>FPD Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IntegrationStatusMessage__c</fullName>
        <description>This field is to store the error message from the callout.</description>
        <label>Integration Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_InterfaceURL__c</fullName>
        <label>Interface URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OrderItemId__c</fullName>
        <description>Field to hold the identify the id of the order product record</description>
        <label>Order Item Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OrderLineIntegrationStatus__c</fullName>
        <label>Integration Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>FPD from PriceFx</label>
    <pluralLabel>FPD from PriceFxs</pluralLabel>
</CustomObject>